--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@contentful/rich-text-types": "^17.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/cli": "^4.1.4",
     "clsx": "^2.1.1",
+    "contentful": "^11.5.15",
     "framer-motion": "^12.7.3",
     "motion": "^12.7.2",
     "next": "15.3.0",
