--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.7.3",
     "motion": "^12.7.2",
     "next": "15.3.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
