--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@contentful/rich-text-types": "^17.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/cli": "^4.1.4",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "contentful": "^11.5.15",
     "framer-motion": "^12.7.3",
