--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "contentful": "^11.5.15",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.7.3",
+    "lucide-react": "^0.508.0",
     "motion": "^12.7.2",
     "next": "15.3.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0"
